Name:               URLroute
Version:            0.0.1

Synopsis:           Type-safe URL-dispatching library for Haskell
Description:        A simple, fast and efficient HTML combinator library using
                    Data.Text.
Author:             Harald Holtmann
Maintainer:         holtmann@zeuxis.de
Homepage:           http://github.com/zeuxis/URLroute
Bug-Reports:        http://github.com/zeuxis/URLroute/issues
License:            BSD3
License-File:       LICENSE
Category:           Web
Cabal-Version:      >= 1.6
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/zeuxis/URLroute.git

library
  ghc-options:      -Wall
                    -fno-warn-name-shadowing
  hs-source-dirs:   src
  build-depends:    base >= 4 && < 5
  exposed-modules:  Web.Route
